--- a/index.html
+++ b/index.html
@@ -6,12 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="dist/style.css">
+    
 </head>
 <body>
-    <div class="main">
-        <h1 class="main__first-title" id="test">Heshani I Love You</h1>
-    </div>
+    <!-- <div class="context">
+        <h1>Pure Css Animated Background</h1>
+    </div> -->
 
+    <div class="area" >
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+
+        </ul>
+    </div >
+
+    <div class="content">
+        <h2>WE HAVE</h2>
+        <div class="content__count">
+            <h1 id="count">12345678 Seconds</h1>
+        </div>
+        <h2>TO FACE <span>AL</span> EXAM</h2>
+        <hr>
+        <div class="content__buttons">
+            <button class="play" onclick="audio.play()">Play</button>
+            <button class="puse" onclick="audio.pause()">Puse</button>
+            <h4>Listen Lofi Music</h4>
+        </div>
+        <hr>
+    </div>
 
     <script src="app/js/script.js"></script>
     <!-- <script>
